--- a/bootstrap/src/main/resources/application.properties
+++ b/bootstrap/src/main/resources/application.properties
@@ -3,13 +3,21 @@ spring.application.name=santorini
 server.servlet.context-path=/santorini
 server.port=9101
 
+logging.level.root=info
+logging.file.path=${user.dir}/logs
+
 # datasource
 spring.datasource.url=jdbc:mysql://49.234.3.131:3306
 spring.datasource.username=root
 spring.datasource.password=cs19jiang1
+
 
 # redis
 spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
 spring.redis.username=leonardo
 spring.redis.password=cs19jiang1
 spring.redis.host=49.234.3.131
+
+# mybatis
+mybatis-plus.mapper-locations=classpath:mybatis/mappers/*.xml
+mybatis-plus.config-location=classpath:mybatis/mybatis-config.xml
