--- a/bootstrap/src/main/resources/application.properties
+++ b/bootstrap/src/main/resources/application.properties
@@ -3,21 +3,36 @@ spring.application.name=santorini
 server.servlet.context-path=/santorini
 server.port=9101
 
+# 日志
 logging.level.root=info
 logging.file.path=${user.dir}/logs
+#logging.config=classpath:logback-spring.xml
 
 # datasource
-spring.datasource.url=jdbc:mysql://49.234.3.131:3306
+database.name=test01
+spring.datasource.url=jdbc:mysql://49.234.3.131:3306/${database.name}?useSSL=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=cs19jiang1
 
 
-# redis
+# 初始化数据库表结构
+spring.sql.init.encoding=utf-8
+spring.sql.init.mode=always
+spring.sql.init.schema-locations[0]=classpath:sql/schema/user-schema.sql
+#spring.sql.init.data-locations[0]=-locations=classpath:sql/schema/user-schema.sql
+
+
+# redis 需要启用时去掉 spring.autoconfigure.exclude 配置
 spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
 spring.redis.username=leonardo
 spring.redis.password=cs19jiang1
 spring.redis.host=49.234.3.131
 
+
 # mybatis
 mybatis-plus.mapper-locations=classpath:mybatis/mappers/*.xml
 mybatis-plus.config-location=classpath:mybatis/mybatis-config.xml
+
+
+# swagger兼容
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
